--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <header>
     <div class="container" style="display:flex;align-items:center;justify-content:space-between;padding:12px 16px;">
       <div style="display:flex;align-items:center;gap:10px">
-        <div class="logo">C</div>
+        <img src="Com'plice_logo-logo.png" alt="Logo Complice" class="logo-img" style="height:36px;width:auto;border-radius:8px;">
         <strong>Complice</strong>
       </div>
     </div>
