--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
     form input, form textarea{width:100%;border:1px solid var(--border);border-radius:12px;padding:12px;background:#fff}
     form textarea{min-height:120px}
     .sr-only{position:absolute;left:-9999px}
+      .logo-img{height:36px;width:auto;display:block;border-radius:8px}
+    .logo-fallback{display:none}
   </style>
 </head>
 <body>
@@ -57,7 +59,8 @@
   <header>
     <div class="container" style="display:flex;align-items:center;justify-content:space-between;padding:12px 16px;">
       <div style="display:flex;align-items:center;gap:10px">
-        <img src="Com'plice_logo-logo.png" alt="Logo Complice" class="logo-img" style="height:36px;width:auto;border-radius:8px;">
+        <img src="logo.png" alt="Logo Complice" class="logo-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';">
+        <div class="logo logo-fallback">C</div>
         <strong>Complice</strong>
       </div>
     </div>
@@ -181,7 +184,8 @@
 
   <footer id="footer">
     <div class="container" style="display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap">
-      <div style="display:flex;align-items:center;gap:10px"><div class="logo" style="width:28px;height:28px;border-radius:10px">C</div><span>Complice · Réseaux sociaux pour commerces locaux</span></div>
+      <div style="display:flex;align-items:center;gap:10px"><img src="logo.png" alt="Logo Complice" class="logo-img" style="height:28px;width:auto;border-radius:10px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';">
+        <div class="logo logo-fallback" style="width:28px;height:28px;border-radius:10px">C</div><span>Complice · Réseaux sociaux pour commerces locaux</span></div>
       <div style="display:flex;gap:14px;align-items:center">
         <span>📧 com.plice@zohomail.eu</span>
         <a class="btn btn-outline" href="https://www.instagram.com/com.plice.49/" target="_blank" rel="noopener">Instagram</a>
@@ -190,3 +194,4 @@
   </footer>
 </body>
 </html>
+
