--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
       <div style="display:flex;align-items:center;gap:10px">
         <img src="logo.png" alt="Logo Complice" class="logo-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';">
         <div class="logo logo-fallback">C</div>
-        <strong>Complice</strong>
       </div>
     </div>
   </header>
@@ -156,7 +155,7 @@
       <h2>Réalisations</h2>
       <p class="muted" style="margin-top:6px">Aperçu de styles que nous pouvons créer (maquettes, exemples démo).</p>
       <div class="grid grid-3" style="margin-top:18px">
-        <div class="card"><div class="content"><img src="real1.png"> style=\"width:100%;height:auto;max-height:400px;object-fit:cover;border-radius:12px;\"><div style="margin-top:8px" class="muted">Café — offre du midi</div></div></div>
+        <div class="card"><div class="content"><img src="real1.png"><style=\"width:50%;height:auto;max-height:200px;object-fit:cover;border-radius:12px;\"><div style="margin-top:8px" class="muted">Café — offre du midi</div></div></div>
         <div class="card"><div class="content"><div class="placeholder">Visuel / Story</div><div style="margin-top:8px" class="muted">Salon — avant / après</div></div></div>
         <div class="card"><div class="content"><div class="placeholder">Visuel / Reel</div><div style="margin-top:8px" class="muted">Boutique — nouveautés</div></div></div>
       </div>
