--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <div class="grid grid-3" style="margin-top:18px">
         <div class="card"><div class="content"><img src="real1-400.png"><style=\"width:100%;height:auto;max-height:450px;object-fit:cover;border-radius:12px;\"><div style="margin-top:8px" class="muted">Café — offre du midi</div></div></div>
         <div class="card"><div class="content"><img src="real2.png"><style=\"width:100%;height:auto;max-height:450px;object-fit:cover;border-radius:12px;\"><div style="margin-top:8px" class="muted">Super marché — nouveau produit</div></div></div>
-        <div class="card"><div class="content"><div class="placeholder">Visuel / Reel</div><div style="margin-top:8px" class="muted">Boutique — nouveautés</div></div></div>
+        <div class="card"><div class="content"><img src="real3.png"><style=\"width:100%;height:auto;max-height:450px;object-fit:cover;border-radius:12px;\"><div style="margin-top:8px" class="muted">Story — produit beauté</div></div></div>
       </div>
     </div>
   </section>
